--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,15 +94,19 @@ body {
     font-style: normal;
     color: #000000;
     /* font-family: 'Inter';     */
-    background-color: #0fad24;
 }
 
 .body-bg {
     background-image:
         url(/images/background.png);
     background-size: 100%;
+    height: 2600px;
     background-repeat: no-repeat;
     padding-top: 115px;
+}
+
+.container {
+    max-width: 3000px !important;
 }
 
 /* b,
@@ -810,6 +814,9 @@ select:focus {
         transition: background-color 0.5s linear;
 }
 
+.masthead {
+    margin: 0 8%;
+}
 
 .masthead-content {
     width: 100%;
@@ -1447,13 +1454,30 @@ select:focus {
     
 }
 
+/* .connect-wallet:hover {
+    text-shadow: 5px;
+    transition: 1s;
+    color:red;
+    text-align: center;
+    cursor: pointer;
+} */
+
+.connect-wallet:active {
+    text-shadow: 5px;
+    background-size: 95% 95%;
+    background-position: center;
+    color:red;
+    text-align: center;
+    cursor: pointer;
+}
+
 .scroll {
     background: url('../images/paper-1.png');
     background-size: 100% 100%;
     width: 100%;
     height: 100%;
-    padding: 200px 100px;
-    font-size: 40px;
+    padding: 20% 19%;
+    font-size: 50px;
 }
 
 .vanguard {
@@ -1466,36 +1490,51 @@ select:focus {
     padding: 200px 100px;
     font-size: 40px; */
 
-    background: url('../images/point-mark-1.png');
-    background-size: 50% 50%;
-    background-position: right;
-    background-repeat: no-repeat;
+
     width: 100%;
     height: 100%;
-    padding: 200px 100px;
     font-size: 40px;
+}
+
+.vanguardDetail {
+    background: url('../images/point-mark-1.png');
+    /* background-size: 50% 50%; */
+    background-position: right top;
+    background-repeat: no-repeat;
+    width: 50%;
+    height: 350px;
+    float: right;
 }
 
 .vanguardDay {
     font-size: 50px;
     height: 50px;
-    width: 94%;
+    margin: 27% 0 0 10%;
     color: white;
-    text-align: right;
+    text-align: center;
 }
 
 .vanguardText {
     font-size: 50px;
     height: 50px;
+    margin-left:10%;
     color: white;
-    text-align: right;
+    text-align: center;
+}
+
+.footer {
+    color: red;
+    background: url('../images/land.png');
+    background-size: 100% 100%;
 }
 
 
 .stakeWood {
-    background: url('../images/wooden-board-4.png');
-    height: 500px;
+    background: url(../images/wooden-board-4.png);
     background-size: 100%;
+    height: 770px;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .stakeWoodContent {
@@ -1505,34 +1544,27 @@ select:focus {
 .stakeDetail {
     background: url('../images/board-2.png');
     display: flex;
-    height: 500px;
+    height: 700px;
+    margin-top: 100px;
     background-size: 100%;
 }
 
 .stakeDetailText {
-    margin-top: 34%;
-    margin-left: 35%;
+    margin-top: 35%;
+    margin-left: 34%;
 }
 
 .stakeDetailText p {
-    height: 27px;
+    height: 40px;
     margin-bottom: 0;
+    text-align: center;
 }
 
 .stakeDetailText div {
-    margin-left: -39px;
     margin-top: 58px;
     font-size: 20px;
-    background: white;
-    color: black;
-}
-
-.connect-wallet:hover {
-    text-shadow: 5px;
-    transition: 1s;
-    color:red;
     text-align: center;
-    cursor: pointer;
+    color: black;
 }
 
 .wallet-modal__list__item {
@@ -1572,12 +1604,19 @@ select:focus {
 }
 
 .mint-number-button {
-    margin: 7% 0 5% 33%;
+    margin: 12% 0 5% 37%;
     min-width: 200px;
+    font-size:40px;
     border: none;
     min-height: 80px;
     background: url('../images/wooden-button.png');
     background-size: 100% 100%;
+}
+
+.mint-number-button:active {
+    background-size: 95% 95%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 
@@ -1585,15 +1624,22 @@ select:focus {
 .stakeButtonGroup {
     display: flex;
     justify-content: space-around;
-    margin: 7% 6% 5% 5%;
+    margin: 9% 6% 5% 5%;
 }
 
 .s_button {
     width: 30%;
     height: 55px;
+    font-size: 25px;
     border: none;
     background: url('../images/wooden-button.png');
     background-size: 100% 100%;
+}
+
+.s_button:active {
+    background-position: center;
+    background-size: 95% 95%;
+    background-repeat: no-repeat;
 }
 /* .mint-number-button:hover {
     opacity: 0.7;
