--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1471,6 +1471,7 @@ select:focus {
 .connect-wallet:active {
     text-shadow: 5px;
     background-size: 95% 95%;
+    font-size: 18px;
     background-position: center;
     color:red;
     text-align: center;
@@ -1616,6 +1617,7 @@ select:focus {
     background-size: 95% 95%;
     background-repeat: no-repeat;
     background-position: center;
+    font-size: 35px;
 }
 
 
@@ -1639,6 +1641,7 @@ select:focus {
     background-position: center;
     background-size: 95% 95%;
     background-repeat: no-repeat;
+    font-size: 22px;
 }
 /* .mint-number-button:hover {
     opacity: 0.7;
